# cwebdraftapi

./: .gitmodules  LICENSE  README.md
cweblib/src/prefix_names/: README.md
cwebparser/: CMakeLists.txt
cwebparser/src/: CMakeLists.txt
cwebparser/src/bisonparser/v4/: CMakeLists.txt  cwebbisonparser.v4.gtest.cpp
cwebparser/src/examples/: CMakeLists.txt
cwebparser/src/examples/echo/: CMakeLists.txt  echo_cweb.cpp  echo_cweb_callbacks.h
cwebparser/src/examples/trace/: CMakeLists.txt  trace_cweb.cpp  trace_cweb_callbacks.h
cwebparser/src/flexlexer/: cwebbisonparser_guard_flexlexer.h
cwebparser/src/flexlexer/v4/: CMakeLists.txt  cweblexer.methods.v4.h  cweblexer.v4.h
cwebparser/src/grammar/: cwebbisonparser.v4.bison.y  cwebbisonparser.v4.flex.l
cwebparser/src/parserapi/v4/: CMakeLists.txt  cwebparser.v4.gtest.cpp  cwebparser.v4.h  cwebparser_callbacks.v4.h  cwebparser_context.v4.h
doc/cwebapi_design/: cwebapi_sampleoutput.20210621.txt  cwebapi_sampleoutput.20210629.txt  trace_miles_span_w_20210706.txt
grammar/: cweb.grammar.bison.y
submodules/: CMakeLists.txt
